Added encryption + manifest v2

--- a/options/options.html
+++ b/options/options.html
@@ -10,6 +10,10 @@
     <form id="options">
       <label name="DZSServerUrl">DZS server url:</label>
       <input type="text" name="DZSServerUrl" id="DZSServerUrl">
+      <label name="EncryptingPassword">Heslo:</label>
+      <input type="password" name="EncryptingPassword" id="EncryptingPassword">
+      <label name="EncryptingDisabled">Zákazat zašifrování zpráv:</label>
+      <input type="checkbox" name="EncryptingDisabled" id="EncryptingDisabled">
       <div class="submit">
         <button type="submit">Save</button>
       </div>
